Added binary embedding file to .gitignore

--- a/Session2_Embeddings_Exploration/.gitignore
+++ b/Session2_Embeddings_Exploration/.gitignore
@@ -4,3 +4,5 @@ data/collobert_embeddings.txt.zip
 data/collobert_embeddings.txt
 
 data/collobert_words.lst
+
+data/frWac_non_lem_no_postag_no_phrase_200_cbow_cut100.bin
